# IA

./: Analysis.ipynb  Cargo.toml  README.org  analysis.py  flake.nix
relatorio/: relatorio.tex  sbc-template.bib
src/: main.rs
