[package]
name = "pre-process"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4", features=["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.203", features=["derive"] }
